--- a/css/pc.css
+++ b/css/pc.css
@@ -164,13 +164,13 @@
     .eyes {
         position: absolute;
         bottom: 71%;
-        right: 25%;
+        right: 230px;
         display: flex;
         transform: rotate(5deg);
     }
     .eyes .on {
-        width: 2.5vw;
-        height: 2.5vw;
+        width: 5rem;
+        height: 5rem;
         border-radius: 50%;
         border: 2px solid black;
         background-color: #fff;
