--- a/css/pc.css
+++ b/css/pc.css
@@ -138,13 +138,13 @@
 .eyes {
     position: absolute;
     bottom: 71%;
-    right: 23%;
+    right: 22%;
     display: flex;
     transform: rotate(5deg);
 }
 .eyes .on {
-    width: 2.5vw;
-    height: 2.5vw;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
     border: 2px solid black;
     background-color: #fff;
@@ -159,6 +159,15 @@
     height: 30%;
     border-radius: 50%;
     background-color: #000;
+}
+@media only screen and (min-width: 1441px){
+    .eyes {
+        position: absolute;
+        bottom: 71%;
+        right: 20rem;
+        display: flex;
+        transform: rotate(5deg);
+    } 
 }
 @media only screen and (min-width: 1919px) {
     .eyes {
