--- a/css/pc.css
+++ b/css/pc.css
@@ -674,16 +674,18 @@
     height: 100vh;
     display: none;
     z-index: 10;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 #etc-modal.on {
     display: block;
 }
 #etc-modal iframe {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 80%;
+    height: 80%;
 }
 #etc-modal #close {
     position: absolute;
