--- a/css/pc.css
+++ b/css/pc.css
@@ -287,7 +287,7 @@
 .second-floor .container .skill {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 6vh;
 }
 
@@ -297,6 +297,8 @@
     border-radius: 15px;
     padding: 20px;
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
 }
 
 .second-floor .container .skill li header {
@@ -367,18 +369,6 @@
     line-height: 2rem;
     margin-top: 20px;
     position: relative;
-}
-
-.second-floor .container .skill li .skill-info:after {
-    position: absolute;
-    top: 10px;
-    right: 0;
-    content: "";
-    width: 30%;
-    height: 100%;
-
-    border-bottom: 3px solid var(--main-color);
-
 }
 /* about 섹션 끝*/
 
