--- a/css/pc.css
+++ b/css/pc.css
@@ -536,6 +536,19 @@
 #contents-wrapper article .left-side .thumbnail {
     width: 80%;
     height: 100%;
+    position: relative;
+}
+#contents-wrapper article .left-side .thumbnail .cross-browser {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 20px;
+    left: 0;
+}
+#contents-wrapper article .left-side .thumbnail .cross-browser img {
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 #contents-wrapper article .left-side .thumbnail img {
@@ -633,7 +646,19 @@
     border-radius: 15px 15px 0 0;
     border: 1px solid black;
     border-bottom: none;
-
+}
+.modal-shadow #close {
+    position: absolute;
+    right: 5vw;
+    top: 70px;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-shadow.on {
